# improc

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  NAMESPACES.md  README.md  conandata.yml  conanfile.py  main.cpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
benchmarks/calib/: bench_calib.cpp
benchmarks/core/: bench_analysis.cpp  bench_background_subtract.cpp  bench_detectors.cpp  bench_feature_detection.cpp  bench_math.cpp  bench_motion.cpp  bench_overhead.cpp  bench_photo.cpp  bench_pipeline.cpp  bench_quality.cpp
benchmarks/io/: bench_video_file_capture.cpp
benchmarks/ml/: bench_augmentation.cpp  bench_eval.cpp
benchmarks/results/: 2026-04-21-results.md  2026-05-17-baseline.json  2026-05-17-baseline.md  2026-05-21-v080-math.json  2026-05-21-v080-motion.json  2026-05-31-analysis.json  2026-05-31-augmentation.json  2026-05-31-background-subtract.json  2026-05-31-calib.json  2026-05-31-detectors.json  2026-05-31-eval.json  2026-05-31-feature-detection.json  2026-05-31-math.json  2026-05-31-motion.json  2026-05-31-overhead.json  2026-05-31-photo.json  2026-05-31-pipeline.json  2026-05-31-quality.json  2026-05-31-threading.json  2026-05-31-tracking.json  2026-05-31-video-file-capture.json  2026-05-31-views.json
benchmarks/threading/: bench_threading.cpp
benchmarks/tracking/: bench_tracking.cpp
benchmarks/views/: bench_views.cpp
cmake/: improcConfig.cmake.in
conan/: conandata.yml  conanfile.py
docs/tutorials/: aruco-markers.md  augmentation-pipeline.md  building-a-pipeline.md  camera-calibration.md  dataset-loading.md  evaluation-metrics.md  feature-detection.md  fisheye-calibration.md  getting-started.md  image-analysis.md  image-quality.md  ml-inference.md  ml-visualization-charts.md  motion-analysis.md  multi-object-tracking.md  object-detectors.md  perceptual-hashing.md  photo-creative.md  real-time-camera.md  segmentation.md  stereo-vision.md  visualization-charts.md
examples/: demo_camera.cpp
examples/calib/: demo_aruco.cpp  demo_calibrate.cpp  demo_epipolar.cpp  demo_pose.cpp  demo_stereo.cpp
examples/core/: demo_adaptive_threshold.cpp  demo_analysis_ops.cpp  demo_apply_mask.cpp  demo_background_subtract.cpp  demo_camshift.cpp  demo_color_adjust.cpp  demo_color_lab_ycrcb.cpp  demo_connected_components.cpp  demo_contours.cpp  demo_describe.cpp  demo_detector_types.cpp  demo_detectors.cpp  demo_draw_matches.cpp  demo_edge.cpp  demo_enhance.cpp  demo_feature_detection.cpp  demo_feature_ops.cpp  demo_filter_ops.cpp  demo_filters.cpp  demo_geometric_preprocessing.cpp  demo_harris_laplacian.cpp  demo_hashing.cpp  demo_hdr.cpp  demo_hist_eq_nlmeans.cpp  demo_homography.cpp  demo_image_ops.cpp  demo_image_wrapper.cpp  demo_invert_in_range.cpp  demo_matching.cpp  demo_morph_extras.cpp  demo_morph_open_close.cpp  demo_morphological_ops.cpp  demo_optical_flow.cpp  demo_photo.cpp  demo_pipeline.cpp  demo_pixel_ops.cpp  demo_pyramid_drawing.cpp  demo_qr_barcode.cpp  demo_quality.cpp  demo_unsharp_mask.cpp  (+1 more)
examples/io/: demo_camera_capture.cpp  demo_image_io.cpp  demo_unified_camera.cpp  demo_video_file_capture.cpp  demo_video_reader.cpp  demo_video_writer.cpp  demo_webcam_capture.cpp
examples/ml/: demo_augment_bbox.cpp  demo_augment_blur.cpp  demo_augment_color.cpp  demo_augment_erase.cpp  demo_augment_geometric.cpp  demo_augment_mixup.cpp  demo_augmentation.cpp  demo_class_eval.cpp  demo_coco_dataset.cpp  demo_dataset.cpp  demo_detection_eval.cpp  demo_dnn_inference.cpp  demo_haar_cascade_loader.cpp  demo_image_loader.cpp  demo_onnx_inference.cpp  demo_seg_eval.cpp  demo_tracking.cpp  demo_voc_dataset.cpp  demo_voc_seg_dataset.cpp
examples/threading/: demo_frame_pipeline.cpp  demo_thread_pool.cpp
examples/views/: demo_views_m1.cpp  demo_views_m2.cpp  demo_views_m3.cpp  demo_views_m4.cpp
examples/visualization/: demo_draw.cpp  demo_montage.cpp  demo_visualization.cpp
include/improc/: error.hpp  exceptions.hpp  improc.hpp  version.hpp
plantuml/: namespace_diagram.txt
src/: version.cpp
src/calib/: aruco.cpp  calibrate.cpp  chessboard.cpp  epipolar.cpp  fisheye.cpp  project.cpp  stereo.cpp  undistort.cpp
src/core/: background_subtract.cpp  convert.cpp  match_template.cpp  pipeline.cpp
src/io/: camera_capture.cpp  ip_camera_capture.cpp  oak_d_capture.cpp  video_file_capture.cpp  video_reader.cpp  video_writer.cpp  webcam_capture.cpp
src/ml/: byte_tracker.cpp  classification_eval.cpp  coco_dataset.cpp  dataset.cpp  detection_eval.cpp  dnn_classifier.cpp  dnn_detector.cpp  dnn_forward.cpp  dnn_segmentor.cpp  haar_cascade_loader.cpp  hog_detector.cpp  image_loader.cpp  iou_tracker.cpp  segmentation_eval.cpp  sort_tracker.cpp  tracking_eval.cpp  voc_dataset.cpp  voc_seg_dataset.cpp
src/onnx/: onnx_classifier.cpp  onnx_detector.cpp  onnx_instance_segmentor.cpp  onnx_segmentor.cpp  onnx_session.cpp
src/threading/: thread_pool.cpp
src/visualization/: draw_contours.cpp  draw_matches.cpp  histogram.cpp  line_plot.cpp  montage.cpp  scatter.cpp
tests/: test_camera.cpp
tests/calib/: test_aruco.cpp  test_calibrate.cpp  test_chessboard.cpp  test_epipolar.cpp  test_fisheye.cpp  test_project.cpp  test_stereo.cpp  test_undistort.cpp
tests/core/: test_background_subtract.cpp  test_convert.cpp  test_image.cpp  test_lut.cpp  test_pipeline.cpp
tests/io/: test_any_camera_source.cpp  test_camera.cpp  test_camera_frame.cpp  test_image_io.cpp  test_oak_d_capture.cpp  test_video_file_capture.cpp  test_video_reader.cpp  test_video_writer.cpp
tests/ml/: test_annotated_augment.cpp  test_byte_tracker.cpp  test_classification_eval.cpp  test_coco_dataset.cpp  test_dataset.cpp  test_detection_eval.cpp  test_dnn_classifier.cpp  test_dnn_detector.cpp  test_dnn_forward.cpp  test_dnn_segmentor.cpp  test_haar_cascade_loader.cpp  test_hog_detector.cpp  test_image_loader.cpp  test_iou_tracker.cpp  test_mix_augment.cpp  test_seg_augment.cpp  test_segmentation_eval.cpp  test_sort_tracker.cpp  test_tracking_eval.cpp  test_voc_dataset.cpp  test_voc_seg_dataset.cpp
tests/onnx/: test_onnx_classifier.cpp  (+4 more)
(+313 files in other folders)
